<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.trodin.gustav.trmanager.AddTroubleReport"
    android:clickable="false">


    <TextView
        android:id="@+id/add_tr_header_text"
        android:text="@string/add_tr_header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textStyle="bold" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#000000"
        android:layout_below="@+id/add_tr_header_text"/>

    <EditText
        android:id="@+id/add_tr_id_text"
        android:inputType="textCapCharacters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_tr_tr_id_hint"
        android:layout_below="@+id/add_tr_header_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp" />

    <Button
        android:id="@+id/add_tr_done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_tr_done_button_text"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/add_tr_id_text"
        android:layout_centerHorizontal="true"
        android:onClick="onDoneTrButtonClick" />

</RelativeLayout>
